tests/whole_screen/snapshots/whole_screen__scroll_rail_hovered_at_40.snap
---
source: tests/whole_screen/main.rs
expression: window.picture()
---
40x16 cursor 13,4 scrolled 0
|over the lazy dog. the quick brown fox ●|
|jumps over the lazy dog. the quick     │|
|brown fox jumps over the lazy dog. the │|
|quick brown fox jumps over the lazy    │|
|dog. the quick brown fox jumps over the│|
|lazy dog. the quick brown fox jumps    ●|
|over the lazy dog. the quick brown fox │|
|jumps over the lazy dog. the quick     │|
|brown fox jumps over the lazy dog.     │|
|again.                                 ┃|
|                                        |
|                         99% window left|
|╭──────────────────────────────────────╮|
|│ ›                                    │|
|╰──────────────────────────────────────╯|
|ask mode on    anthropic · claude-test-1|
