tests/whole_screen/snapshots/whole_screen__scroll_rail_hovered_at_80.snap
---
source: tests/whole_screen/main.rs
expression: window.picture()
---
80x16 cursor 13,4 scrolled 0
|lazy dog. the quick brown fox jumps over the lazy dog. the quick brown fox     │|
|jumps over the lazy dog. the quick brown fox jumps over the lazy dog. the quick│|
|brown fox jumps over the lazy dog. the quick brown fox jumps over the lazy dog.●|
|the quick brown fox jumps over the lazy dog. the quick brown fox jumps over the│|
|lazy dog. the quick brown fox jumps over the lazy dog. the quick brown fox     │|
|jumps over the lazy dog. the quick brown fox jumps over the lazy dog. the quick│|
|brown fox jumps over the lazy dog. the quick brown fox jumps over the lazy dog.●|
|the quick brown fox jumps over the lazy dog. the quick brown fox jumps over the│|
|lazy dog. the quick brown fox jumps over the lazy dog. the quick brown fox     ┃|
|jumps over the lazy dog. the quick brown fox jumps over the lazy dog. again.   ┃|
|                                                                                |
|                                                                 99% window left|
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ ›                                                                            │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle)                       anthropic · claude-test-1|
