tests/whole_screen/snapshots/whole_screen__settings_config_40.snap
---
source: tests/whole_screen/main.rs
expression: config
---
40x30 cursor 29,0 scrolled 0
|────────────────────────────────────────|
|                                        |
|Settings   Status ‹ Config › Usage      |
|                                        |
|╭──────────────────────────────────────╮|
|│ / to search                          │|
|╰──────────────────────────────────────╯|
|                                        |
|› Theme                             auto|
|  Syntax theme          Monokai Extended|
|  Glyphs                         unicode|
|  Colour    auto · applies at next start|
|  Tool detail                    compact|
|  Scroll rail                         on|
|  Mouse scroll speed               ‹ 6 ›|
|  Send with                        enter|
|  Tone   concise · applies at next start|
|  Compaction                        full|
|    applies at next start               |
|  Check for updates                never|
|  Prompt caching                  prefer|
|    applies at next start               |
|  Cache isolation                session|
|    applies at next start               |
|  Cache retention        providerDefault|
|    applies at next start               |
|  ↓ 1 more                              |
|                                        |
|↑↓ walk · enter changes · / search      |
|←→ tabs · esc to close                  |
