tests/whole_screen/snapshots/whole_screen__settings_search_40.snap
---
source: tests/whole_screen/main.rs
expression: search
---
40x30 cursor 19,7 scrolled 0
|CRUCIBLE                                |
|/…/workspace                            |
|                                        |
|› /settings                             |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|                                        |
|────────────────────────────────────────|
|                                        |
|Settings   Status ‹ Config › Usage      |
|                                        |
|╭──────────────────────────────────────╮|
|│ cache                                │|
|╰──────────────────────────────────────╯|
|                                        |
|› Cache isolation                session|
|    applies at next start               |
|  Cache retention        providerDefault|
|    applies at next start               |
|  Persistent cache                forbid|
|    applies at next start               |
|                                        |
|type to filter · ↓ rows · esc clears    |
