tests/whole_screen/snapshots/whole_screen__settings_search_80.snap
---
source: tests/whole_screen/main.rs
expression: search
---
80x30 cursor 22,7 scrolled 0
|│ /…/workspace                                                                ││|
|│                                                                             ││|
|│ Recent sessions                                                             │┃|
|│                                                                             │┃|
|│ No earlier session for this workspace                                       │┃|
|│                                                                             │┃|
|│ ─────────────────────────────────────────────────────────────────────────── │┃|
|│                                                                             │┃|
|│ Tips                                                                        │┃|
|│                                                                             │┃|
|│ · /          opens the command list                                         │┃|
|│ · \ enter    adds a line without sending                                    │┃|
|│ · shift+tab  steps the permission mode                                      │┃|
|│ · ctrl+c     clears the line typed so far                                   │┃|
|╰─────────────────────────────────────────────────────────────────────────────╯┃|
|                                                                               ┃|
|› /settings                                                                    ●|
|────────────────────────────────────────────────────────────────────────────────|
|                                                                                |
|Settings     Status   ‹ Config ›   Usage                                        |
|                                                                                |
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ cache                                                                        │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|                                                                                |
|› Cache isolation                                session · applies at next start|
|  Cache retention                        providerDefault · applies at next start|
|  Persistent cache                                forbid · applies at next start|
|                                                                                |
|type to filter · ↓ to the rows · esc to clear                                   |
