tests/whole_screen/snapshots/whole_screen__settings_toggle_80.snap
---
source: tests/whole_screen/main.rs
expression: picture
---
80x30 cursor 27,4 scrolled 0
|╭─ crucible v###### ───────────────────────────────────────────────────────────╮|
|│                                  │ Recent sessions                           │|
|│  ▄▄▄ ▄▄▄ █  █ ▄▄▄ █ ▄▄▄ █   ▄▄▄  │                                           │|
|│  █   █▄▄ █  █ █   █ █▄█ █   █▄▄  │ No recent sessions                        │|
|│  ▀▄▄ █ █ ▀▄▄▀ ▀▄▄ █ █▄█ █▄▄ █▄▄  │                                           │|
|│                                  │ ───────────────────────────────────────── │|
|│  /…/workspace                    │                                           │|
|│                                  │ Tips                                      │|
|│                                  │                                           │|
|│                                  │ · /          opens the command list       │|
|│                                  │ · \ enter    adds a line without sending  │|
|│                                  │ · shift+tab  steps the permission mode    │|
|│                                  │ · ctrl+c     clears the line typed so far │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|                                                                                |
|› say hello                                                                     |
|                                                                                |
|Hello.                                                                          |
|                                                                                |
|› /settings                                                                     |
|Scroll rail set to off                                                          |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                                |
|                                                                 99% window left|
|╭──────────────────────────────────────────────────────────────────────────────╮|
|│ ›                                                                            │|
|╰──────────────────────────────────────────────────────────────────────────────╯|
|ask mode on (shift+tab to cycle)                       anthropic · claude-test-1|
