tests/whole_screen/snapshots/whole_screen__settings_usage_40.snap
---
source: tests/whole_screen/main.rs
expression: timeless(&usage)
---
40x30 cursor 29,0 scrolled 0
|CRUCIBLE                                |
|/…/workspace                            |
|                                        |
|› /settings                             |
|                                        |
|                                        |
|                                        |
|                                        |
|────────────────────────────────────────|
|                                        |
|Settings   Status Config ‹ Usage ›      |
|                                        |
|Usage · anthropic · API key             |
|                                        |
|Session                                 |
|  Total cost     nothing asked yet      |
|  API time       Ns                     |
|  Wall time      Ns                     |
|  Lines changed  +0 −0                  |
|  Tokens         0 in · 0 out           |
|                 0 cache read           |
|                 0 cache write          |
|                                        |
|Context                                 |
|  ░░░░░░░░░░░░░░░░░░░░░░░░░░   0% used  |
|                                        |
|Plan limits                             |
|  limits not reported                   |
|                                        |
|←→ tabs · esc to close                  |
